--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "@types/node": "^18.11.10",
+    "vue": "^3.2.41",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
