--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,8 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "prettier": "^2.8.0",
     "prettier-plugin-sort-imports": "^1.7.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
