--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,11 @@
     "prettier:check": "prettier --check ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@types/node": "^18.11.10",
     "vue": "^3.2.41",
     "vue-router": "^4.0.13"
