--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@types/node": "^18.11.10",
     "vue": "^3.2.41",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
