--- a/finance-planner/package.json
+++ b/finance-planner/package.json
@@ -1,5 +1,34 @@
 {
+  "name": "finance-planner",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "prettier:format": "prettier --write .",
+    "prettier:check": "prettier --check ."
+  },
   "dependencies": {
-    "vuex": "^4.0.2"
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@types/node": "^18.11.10",
+    "vue": "^3.2.41",
+    "vue-router": "^4.0.13",
+    "vuex-persist": "^3.1.3"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^3.2.0",
+    "prettier": "^2.8.0",
+    "prettier-plugin-sort-imports": "^1.7.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.3",
+    "vue-tsc": "^1.0.9"
   }
 }
