--- a/.github/workflows/build-finance-planner.yml
+++ b/.github/workflows/build-finance-planner.yml
@@ -18,7 +18,9 @@ jobs:
         
       - name: Build plugin
         run: |
-          ./finance-planner/build.sh
+          cd ./finance-planner
+          npm ci
+          ./build.sh
 
       - name: Upload plugin
         uses: actions/upload-artifact@v3
